Revert "Fixing hover icon positioning, overflow and core layout of header element in unit testing."
This reverts commit 65e35e35340f5ae15d7686e901eb8d069d36dc86.

--- a/packages/insomnia-app/app/ui/css/components/editable.less
+++ b/packages/insomnia-app/app/ui/css/components/editable.less
@@ -1,24 +1,22 @@
-.editable {
-  width: 100%;
-}
-
 input.editable {
   font-style: italic !important;
-  padding-left: var(--padding-md);
   opacity: 0.9;
 }
 
 span.editable.hover-hint {
-  &::before {
+  padding-right: 20px !important;
+
+  &::after {
     transition: opacity 0.15s;
     transition-timing-function: ease-in;
     opacity: 0;
-    content: '\f14b';
+    content: '\f040';
     font-family: FontAwesome;
-    margin-right:var(--padding-xs);
+    position: absolute;
+    margin-left:var(--padding-xs);
   }
   &:hover {
-    &::before {
+    &::after {
       opacity: 1;
     }
   }
